--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="js/script.js"></script>
 </head>
 
-<body>
+<body onload="makeList('teams')">
     <div class="fixed" id="topBar">
         <div class="right margin-0-1 vcenter" id="visibilityToggleContainer">
             <input type="checkbox" onclick="toggleShow('player1')" id="toggleBlue1" class="" checked/>
@@ -39,7 +39,7 @@
             <img src="images/logo.png" class="fullHeight contain left" id="teamLogo" />
             <div class="left margin-0-1 vcenter material light" id="matchData">
                 <div class="textfieldGroup left">
-                    <input type="text" placeholder="" name="matchNumber" required onblur="helloWorld('matchNumber')" />
+                    <input type="text" class="light" name="matchNumber" required onblur="helloWorld('matchNumber')" />
                     <label for="matchNumber">Match #</label>
                     <span class="bar"></span>
                 </div>
@@ -63,6 +63,14 @@
         <div class="clear"></div>
     </div>
     <div class="dropshadow" id="contentContainer">
+        
+        <div id="scoreCards" class="right">
+        <div class="player" id="player1"></div>
+        <div class="player" id="player2"></div>
+        <div class="player" id="player3"></div>
+        <div class="player" id="player4"></div>
+        <div class="clear"></div>
+        </div>
         <div class="left" id="matchList">
             <div class="textfieldGroup material full">
                 <input type="number" class="dark" placeholder="" name="matchSearch" id="matchSearch" required/>
@@ -87,91 +95,7 @@
                         Red 2
                     </th>
                 </tr>
-                <tr>
-                    <td>
-                        1
-                    </td>
-                    <td>
-                        111111
-                    </td>
-                    <td>
-                        1111
-                    </td>
-                    <td>
-                        1111
-                    </td>
-                    <td>
-                        1111
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        2
-                    </td>
-                    <td>
-                        1111
-                    </td>
-                    <td>
-                        1111
-                    </td>
-                    <td>
-                        1111
-                    </td>
-                    <td>
-                        111111
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        3
-                    </td>
-                    <td>
-                        1111
-                    </td>
-                    <td>
-                        111111
-                    </td>
-                    <td>
-                        1111
-                    </td>
-                    <td>
-                        1111
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        4
-                    </td>
-                    <td>
-                        1111
-                    </td>
-                    <td>
-                        1111
-                    </td>
-                    <td>
-                        111111
-                    </td>
-                    <td>
-                        1111
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        5
-                    </td>
-                    <td>
-                        1111
-                    </td>
-                    <td>
-                        111111
-                    </td>
-                    <td>
-                        1111
-                    </td>
-                    <td>
-                        1111
-                    </td>
-                </tr>
+               
             </table>
             <div class="left" id="addMatches">
                 <form id="matchInputForm">
@@ -182,35 +106,33 @@
                         <span class="bar"></span>
                     </div>
                     <div class="textfieldGroup material fifth left">
-                        <input type="number" class="dark" placeholder="" name="addBlue1" required/>
+                        <input type="number" list="teams" class="dark" placeholder="" name="addBlue1" required/>
                         <label class="dark" for="addBlue1">Blue 1</label>
                         <span class="bar"></span>
                     </div>
                     <div class="textfieldGroup material fifth left">
-                        <input type="number" class="dark" placeholder="" name="addBlue2" required/>
+                        <input type="number"list="teams"  class="dark" placeholder="" name="addBlue2" required/>
                         <label class="dark" for="addBlue2">Blue 2</label>
                         <span class="bar"></span>
                     </div>
                     <div class="textfieldGroup material fifth left">
-                        <input type="number" class="dark" placeholder="" name="addRed1" required/>
+                        <input type="number" list="teams" class="dark" placeholder="" name="addRed1" required/>
                         <label class="dark" for="addRed1">Red 1</label>
                         <span class="bar"></span>
                     </div>
                     <div class="textfieldGroup material fifth left">
-                        <input type="number" class="dark" placeholder="" name="addRed2" required/>
+                        <input type="number" list="teams" class="dark" placeholder="" name="addRed2" required/>
                         <label class="dark" for="addRed2">Red 2</label>
                         <span class="bar"></span>
                     </div>
                 </form>
-                <button class="accent button full" onclick="">Enter</button>
+                <button class="accent button full" onclick="form2MatchList('matchInputForm')">Enter</button>
             </div>
         </div>
-        <div class="player" id="player1"></div>
-        <div class="player" id="player2"></div>
-        <div class="player" id="player3"></div>
-        <div class="player" id="player4"></div>
         <div class="clear"></div>
     </div>
+     <datalist id="teams">
+                    </datalist>
     <!-- Other People's scripts that I don't know how to make work in their own document -->
     <script>
         var $rows = $('#matches tr');
