--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/scriptLibrary.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/test.js"></script>
 </head>
 
 <body onload="makeList('teams')">
@@ -50,9 +51,9 @@
                 </div>
             </div>
             <div class="right margin-0-1" id="controlButtons">
-                <button class="button accent " onclick="">Save Match</button>
-                <button class="button blue " onclick="">Export Scores</button>
-                <!-- <button class="button none" onclick="">Import Scores</button> -->
+                <button class="button accent " onclick="">Save</button>
+                <button class="button red" onclick="">reset</button>
+                <button class="button blue " onclick="">Export</button>
             </div>
         </div>
         <div class="clear"></div>
