Creates CSV string on each save

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </form>
             <div class="right margin-0-1" id="controlButtons">
                 <button class="button accent " onclick="score('scores')">submit</button>
-                <button class="button blue" onclick="formReset('matchData')">download</button>
+                <button class="button blue" onclick="arrayCSV(allScores)">download</button>
                 <!--<button class="button none light " onclick="checkRequiredFields()">import</button> -->
             </div>
         </div>
