--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/buttonColor.css">
     <link rel="stylesheet" href="css/mediaqueries.css">
     <script src="js/jquery.js"></script>
+    <script src="js/download.js"></script>
     <script src="js/scriptLibrary.js"></script>
     <script src="js/script.js"></script>
     <script src="js/formEntry.js"></script>
@@ -52,7 +53,7 @@
             </form>
             <div class="right margin-0-1" id="controlButtons">
                 <button class="button accent " onclick="score('scores')">submit</button>
-                <button class="button blue" onclick="arrayCSV(allScores)">download</button>
+                <button class="button blue" onclick="downloadCSV(csv)">download</button>
                 <!--<button class="button none light " onclick="checkRequiredFields()">import</button> -->
             </div>
         </div>
