--- a/test.html
+++ b/test.html
@@ -1,29 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-.bold {font-weight:bold;}
-    </style>
     <meta charset="utf-8">
-    <title></title>
-    <script src="js/jquery.js"></script>
-    <script src="js/scripts.js"></script>
+    <title>Set and Map Tests</title>
+    <script src="js/test.js"></script>
   </head>
   <body>
-      <table id="cartGrid">
-    <thead>
-         <tr>
-            <th>Item Description</th>
-            <th>Qty</th>
-            <th>Unit Price</th>
-            <th>Ext Price</th>
-         </tr>
-    </thead>
-  <tbody>
-      <tr><td >Old Lamp</td><td >1</td><td >107.00</td><td>107.00</td>
-      <tr><td>Blue POst</td><td>2</td><td>7.00</td><td>14.00</td>
-  </tbody>
-  </table>
-
+<button onclick="myFunction(1, 21)">o_0</button>
+<button onclick="myFunction(2, 21)">[o_0]</button>
   </body>
 </html>
