Streamlining Match submit functions
Currently reworking and testing match submit functions to better catch
errors and cut down on lines of code.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="js/download.js"></script>
     <script src="js/scriptLibrary.js"></script>
     <script src="js/script.js"></script>
-    <script src="js/formEntry.js"></script>
+    <script src="js/formEntryTest.js"></script>
 </head>
 
 <body onload="makeList('teams'); fileUpload(); modalControl()">
