--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="shortcut icon" href="images/icons/logo.ico" type="image/x-icon" />
     <meta name="description" content="An offline scouting app">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/tabs.css">
     <link rel="stylesheet" href="css/forms.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/buttonColor.css">
     <link rel="stylesheet" href="css/modal.css">
+
     <link rel="stylesheet" href="css/mediaqueries.css">
     <script src="js/jquery.js"></script>
     <script src="js/scripts.js"></script>
@@ -123,7 +125,13 @@
         </div>
         <div class="clear"></div>
     </div>
-    <div class="dropshadow" id="contentContainer">
+    <div class="dropshadow tabs" id="contentContainer">
+      <div class="tabs nav">
+          <div id="matchNav" class="tabs nav link active contentTabs" onclick="tabControl('contentTabs', 'matchNav', 'matchTab')">Matches</div>
+          <div id="teamNav" class="tabs nav link contentTabs" onclick="tabControl('contentTabs', 'teamNav', 'teamTab')">Teams</div>
+          <div id="overviewNav" class="tabs nav link contentTabs" onclick="tabControl('contentTabs', 'overviewNav', 'overviewTab')">Overview</div>
+      </div>
+        <div id = "matchTab" class ="tabs content active contentTabs">
         <div id="scoreCards" class="right">
             <form id="red_1" class="player dropshadow redAlliance">
                 <div class="teamInfo material">
@@ -988,6 +996,18 @@
             </table>
         </div>
         <div class="clear"></div>
+      </div>
+      <div id = "teamTab" class ="tabs content contentTabs">
+        <div class="tabs body">
+          Content two
+        </div>
+      </div>
+
+      <div id = "overviewTab" class ="tabs content contentTabs">
+        <div class="tabs body">
+          content three
+        </div>
+      </div>
     </div>
     <datalist id="teams">
     </datalist>
