--- a/index2.html
+++ b/index2.html
@@ -3,23 +3,25 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Scouting App [Alpha 0.12]</title>
-    <link rel="shortcut icon" href="images/icons/logo.ico" type="image/x-icon" />
     <meta name="description" content="An offline scouting app">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/forms.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/buttonColor.css">
     <link rel="stylesheet" href="css/modal.css">
-    <link rel="stylesheet" href="css/mediaqueries.css">
+    <link rel="stylesheet" href="css/visualize.css">
     <script src="js/jquery.js"></script>
-    <script src="js/download.js"></script>
-    <script src="js/scriptLibrary.js"></script>
+    <script src="js/d3.js"></script>
     <script src="js/test.js"></script>
-    <script src="js/scripts.js"></script>
 </head>
 
-<body onload="mapAverage(3)">
-  Hello World
+<body onload="makeChart()">
+<div id="graphs">
+  <div class="chart">
+<svg></svg>
+  </div>
+</div>
+  <button onclick=" changeChart(); makeChart()">Click</button>
 </body>
+
 </html>
